syntax = "proto3";

package com.road.yishi.proto.campaign;

message TowerInfoReqMsg {
  int32 index = 1;
}
